# PythonProjects

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  docs.yml  release.yml
docs/: contributing.md  getting-started.md  index.md  projects.md
projects/: blackjack.py  bubble_sort.py  caesar_cipher.py  calculator.py  change_calc.py  check_palindrome.py  coin_estimator.py  coin_flip.py  collatz.py  count_vowels.py  descriptive_stats.py  dice_roller.py  factor_calc.py  fibonacci.py  fizz_buzz.py  gregory_leibniz.py  higher_lower.py  magic_eight_ball.py  multiplication_table.py  nilakantha.py  ninety_nine_bottles.py  pig_latin.py  py_triple.py  reverse_string.py  rock_paper_scissors.py  sieve_of_eratosthenes.py  tic_tac_toe.py  vigenere_cipher.py
tests/: __init__.py  test_placeholder.py
