[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonprojects"
version = "0.1.0"
description = "Various Python projects collection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PythonProjects Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.3",
    "bandit>=1.7.8",
    "pip-audit>=2.7.2",
    "detect-secrets>=1.4.0",
    "pre-commit>=3.7.0",
    "twine>=5.0.0",
    "build>=1.1.1",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.13",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | bazel-*
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".venv", "bazel-*"]

[tool.pytest.ini_options]
testpaths = ["tests", "projects"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["projects"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "bazel-*"]
skips = []
